reference/src/test/resources/bad/badSemantics.cooma
{fun (x : Int) = x}("hello")
